Initial styles and Angular setup

--- a/source/assets/stylesheets/application.sass
+++ b/source/assets/stylesheets/application.sass
@@ -29,7 +29,8 @@
 //   Structures
 // -------------------------------------
 
-@import "structures/example"
+@import "structures/progress"
+@import "structures/slide"
 
 // -------------------------------------
 //   Inbox
