--- a/source/assets/stylesheets/foundation/_base.sass
+++ b/source/assets/stylesheets/foundation/_base.sass
@@ -34,14 +34,15 @@ h2, .h2
   @extend .mbxs
   @extend .mtf
   @extend .tfh
-  @extend .twb
+  @extend .ttu
   line-height: 1.2
+  font-weight: 700
 
 h1, .h1
-  font-size: 200%
+  font-size: 400%
 
 h2, .h2
-  font-size: 150%
+  font-size: 300%
 
 // -------------------------------------
 //   Inline Content
