--- a/source/assets/stylesheets/foundation/_settings.sass
+++ b/source/assets/stylesheets/foundation/_settings.sass
@@ -20,8 +20,9 @@
 $b-border: 2px solid lighten(#0053c9, 10%)
 $b-borderRadius: 3px
 $b-boxShadow: 0 1px 2px rgba(#222, 0.25)
-$b-fontSize: 16px
+$b-fontSize: 28px
 $b-lineHeight: 1.5
+$b-minWidth: 720px
 $b-maxWidth: 61.25em
 $b-whitespace: 1.25em
 
@@ -29,12 +30,12 @@ $b-whitespace: 1.25em
 
 $c-background: #fff
 $c-base: #222
-$c-highlight: #0053c9
+$c-highlight: #c0392b
 $c-invert: #fff
 $c-subdue: #ccc
 
 // ----- Fonts ----- //
 
-$f-base: sans-serif
-$f-header: sans-serif
+$f-base: 'Vollkorn', serif
+$f-header: 'Oswald', sans-serif
 
