--- a/source/index.haml
+++ b/source/index.haml
@@ -1,3 +1,23 @@
-.cell.mtl.tac
-  %h1 Middleman is Watching
-  %p= link_to 'Read Online Documentation', 'http://middlemanapp.com/'
+%slide.is-active
+  .slide-content
+    .middle.tac
+      %h1 Slide Title
+      %p This is some description text.
+
+%slide(img='http://gificiency.com/m/angry-batman.gif')
+  .slide-content
+    .middle.tac
+      %h1 Slide Title
+      %p This is some description text.
+
+%slide(img='http://gificiency.com/m/angry-ronswanson.gif')
+  .slide-content
+    .bottom
+      %h1 Another Slide Title
+      %p This is some more description text.
+
+%slide(img='http://gificiency.com/m/dance-abed.gif')
+  .slide-content
+    .middle.tac
+      %h1 Another Slide Title
+      %p This is some more description text.
