--- a/source/assets/stylesheets/foundation/_helpers.sass
+++ b/source/assets/stylesheets/foundation/_helpers.sass
@@ -15,11 +15,87 @@
 //   Mixins
 // -------------------------------------
 
+// ----- Animation ----- //
+// -> Auto-prefixed animation properties
+//
+// $args - the animation arguments
+//
+
+=animation($args)
+  -webkit-animation: $args
+  animation: $args
+
+// ----- Keyframe Animation ----- //
+// -> Auto-prefixed keyframe-animation
+//
+// $name - the name of the animation
+// @content - the generated content within the mixin
+//
+
+=keyframe-animation($name)
+  @-webkit-keyframes #{$name}
+    @content
+  @-moz-keyframes #{$name}
+    @content
+  @keyframes #{$name}
+    @content
+
+// ----- Linear Gradient ----- //
+// -> Auto-prefixed linear-gradient properties (with fallback)
+//
+// $first - the first color stop (also, fallback color)
+// $second - the second color stop
+//
+
+=linear-gradient($first, $second)
+  background-image: -webkit-linear-gradient($first, $second)
+  background-image: linear-gradient($first, $second)
+  background-color: $first
+
 // ----- Respond-to ----- //
+// -> Generates a media query
+//
+// $val - the breakpoint size
+// $query - the type of query ('min-width', 'max-width')
+// $media - the media type ('screen', 'print', etc.)
+// @content - the generated content within the mixin
+//
 
 =respond-to($val, $query: min-width, $media: screen)
   @media #{$media} and ($query: $val)
     @content
+
+// ----- Transform ----- //
+// -> Auto-prefixed transform properties
+//
+// $args - a variable number of transform values
+//
+
+=transform($args...)
+  -webkit-transform: $args
+  -moz-transform: $args
+  -ms-transform: $args
+  transform: $args
+
+// ----- Transition ----- //
+// -> Auto-prefixed transition properties
+//
+// $args - a variable number of transition values
+//
+
+=transition($args...)
+  -webkit-transition: $args
+  transition: $args
+
+// ----- Transition Transform ----- //
+// -> Auto-prefixed transition properties (for transforms)
+//
+// $args - a variable number of transform values
+//
+
+=transition-transform($args...)
+  -webkit-transition: -webkit-transform $args
+  transition: transform $args
 
 // -------------------------------------
 //   Animations
