--- a/source/layouts/layout.haml
+++ b/source/layouts/layout.haml
@@ -1,14 +1,22 @@
 !!! 5
-%html{ :lang => "en" }
+%html{ :lang => 'en', :'ng-app' => 'Presenter' }
   %head
-    %meta{ :charset => "utf-8" }
+    %meta{ :charset => 'utf-8' }
     %meta{ :content => 'IE=edge,chrome=1', 'http-equiv' => 'X-UA-Compatible' }
-    / Use title if it's in the page YAML frontmatter
-    %title= current_page.data.title || "The Middleman"
+    %title= current_page.data.title || 'Presenter'
 
+    = stylesheet_link_tag 'http://fonts.googleapis.com/css?family=Oswald:700'
+    = stylesheet_link_tag 'http://fonts.googleapis.com/css?family=Vollkorn:400italic,400,700'
     = stylesheet_link_tag 'application'
 
   %body{ class: page_classes }
+
+    %progress
+
     = yield
 
+    = javascript_include_tag  'https://ajax.googleapis.com/ajax/libs/angularjs/1.2.13/angular.min.js'
     = javascript_include_tag  'application'
+    = javascript_include_tag  'controllers/slides'
+    = javascript_include_tag  'directives/progress'
+    = javascript_include_tag  'directives/slide'
