Initial progress bar functionality

--- a/source/index.haml
+++ b/source/index.haml
@@ -1,23 +1,25 @@
-%slide.is-active
-  .slide-content
-    .middle.tac
-      %h1 Slide Title
-      %p This is some description text.
+%slides
 
-%slide(img='http://gificiency.com/m/angry-batman.gif')
-  .slide-content
-    .middle.tac
-      %h1 Slide Title
-      %p This is some description text.
+  %slide.is-active
+    .slide-content
+      .middle.tac
+        %h1 Slide Title
+        %p This is some description text.
 
-%slide(img='http://gificiency.com/m/angry-ronswanson.gif')
-  .slide-content
-    .bottom
-      %h1 Another Slide Title
-      %p This is some more description text.
+  %slide(img='http://gificiency.com/m/angry-batman.gif')
+    .slide-content
+      .middle.tac
+        %h1 Slide Title
+        %p This is some description text.
 
-%slide(img='http://gificiency.com/m/dance-abed.gif')
-  .slide-content
-    .middle.tac
-      %h1 Another Slide Title
-      %p This is some more description text.
+  %slide(img='http://gificiency.com/m/angry-ronswanson.gif')
+    .slide-content
+      .bottom
+        %h1 Another Slide Title
+        %p This is some more description text.
+
+  %slide(img='http://gificiency.com/m/dance-abed.gif')
+    .slide-content
+      .middle.tac
+        %h1 Another Slide Title
+        %p This is some more description text.
