--- a/source/layouts/layout.haml
+++ b/source/layouts/layout.haml
@@ -17,6 +17,7 @@
 
     = javascript_include_tag  'https://ajax.googleapis.com/ajax/libs/angularjs/1.2.13/angular.min.js'
     = javascript_include_tag  'application'
-    = javascript_include_tag  'controllers/slides'
+    = javascript_include_tag  'services/progress'
     = javascript_include_tag  'directives/progress'
+    = javascript_include_tag  'directives/slides'
     = javascript_include_tag  'directives/slide'
