Add another test slide

--- a/source/index.haml
+++ b/source/index.haml
@@ -23,3 +23,8 @@
       .middle.tac
         %h1 Another Slide Title
         %p This is some more description text.
+
+  %slide(img='http://gificiency.com/m/happy-hulk.gif')
+    .slide-content
+      %h1 Another Slide Title
+      %p This is some more description text.
