More organization/style updates

--- a/source/assets/stylesheets/foundation/_base.sass
+++ b/source/assets/stylesheets/foundation/_base.sass
@@ -14,6 +14,7 @@ html
 
 body
   font-size: 100%
+  overflow: hidden
 
 // -------------------------------------
 //   Block Content
@@ -56,3 +57,7 @@ a
   &:focus
     @extend .tcs
     border-bottom-color: $c-highlight
+
+img
+  height: auto
+  max-width: 100%
