--- a/source/assets/stylesheets/foundation/_utilities.sass
+++ b/source/assets/stylesheets/foundation/_utilities.sass
@@ -67,6 +67,9 @@
   position: absolute
   top: 50%
 
+.middle--text
+  width: 90%
+
 // ----- Stretch ----- //
 
 .stretch
@@ -205,6 +208,10 @@
 
 .tac
   text-align: center
+.tal
+  text-align: left
+.tar
+  text-align: right
 
 // ----- Color ----- //
 
@@ -229,13 +236,13 @@
 .tsxs
   font-size: 60%
 .tss
-  font-size: 75%
+  font-size: 80%
 .tsm
-  font-size: 85%
+  font-size: 100%
 .tsl
-  font-size: 105%
+  font-size: 150%
 .tsxl
-  font-size: 115%
+  font-size: 200%
 
 // ----- Style ----- //
 
