--- a/source/assets/stylesheets/foundation/_settings.sass
+++ b/source/assets/stylesheets/foundation/_settings.sass
@@ -28,7 +28,7 @@ $b-whitespace: 1.25em
 
 // ----- Colors ----- //
 
-$c-background: #fff
+$c-background: #000
 $c-base: #222
 $c-highlight: #c0392b
 $c-invert: #fff
