--- a/source/index.haml
+++ b/source/index.haml
@@ -1,30 +1,48 @@
-%slides
+%slides(hotkeys)
 
   %slide.is-active
     .slide-content
       .middle.tac
         %h1 Slide Title
-        %p This is some description text.
 
-  %slide(img='http://gificiency.com/m/angry-batman.gif')
+  %slide
     .slide-content
       .middle.tac
-        %h1 Slide Title
-        %p This is some description text.
+        %h2 Image
+        = image_tag 'http://placehold.it/800x400', alt: 'Code School', class: 'slide-img'
 
-  %slide(img='http://gificiency.com/m/angry-ronswanson.gif')
+  %slide.slide--light
+    .slide-content
+      .middle.tac
+        %h1 Light
+
+  %slide.slide--dark
+    .slide-content
+      .middle.tac
+        %h1 Dark
+
+  %slide
+    .slide-content
+      .middle.middle--text
+        %p.tsxl
+          What would happen if I put some longer, more thought-provoking
+          text here that fills up more space?
+
+  %slide(img='http://gificiency.com/m/angry-snowcat.gif')
     .slide-content
       .bottom
-        %h1 Another Slide Title
+        %h1 GIF
         %p This is some more description text.
 
   %slide(img='http://gificiency.com/m/dance-abed.gif')
     .slide-content
       .middle.tac
-        %h1 Another Slide Title
+        %h1 GIF
         %p This is some more description text.
 
   %slide(img='http://gificiency.com/m/happy-hulk.gif')
     .slide-content
-      %h1 Another Slide Title
+      %h1 GIF
       %p This is some more description text.
+
+  %slide(img='http://gificiency.com/m/excited-parks.gif')
