Add ui-router, additional slide styles

--- a/source/assets/stylesheets/foundation/_settings.sass
+++ b/source/assets/stylesheets/foundation/_settings.sass
@@ -33,6 +33,8 @@ $c-base: #222
 $c-highlight: #c0392b
 $c-invert: #fff
 $c-subdue: #ccc
+$c-success: #27ae60
+$c-warning: #f39c12
 
 // ----- Fonts ----- //
 
