--- a/source/assets/stylesheets/structures/_slide.sass
+++ b/source/assets/stylesheets/structures/_slide.sass
@@ -32,6 +32,16 @@
   @extend .bci
   @extend .tcb
 
+// ----- Success ----- //
+
+.slide.slide--success
+  background: $c-success
+
+// ----- Warning ----- //
+
+.slide.slide--warning
+  background: $c-warning
+
 // -------------------------------------
 //   States
 // -------------------------------------
