--- a/source/index.haml
+++ b/source/index.haml
@@ -21,6 +21,16 @@
       .middle.tac
         %h1 Dark
 
+  %slide.slide--success
+    .slide-content
+      .middle.tac
+        %h1 Success
+
+  %slide.slide--warning
+    .slide-content
+      .middle.tac
+        %h1 Warning
+
   %slide
     .slide-content
       .middle.middle--text
@@ -28,11 +38,11 @@
           What would happen if I put some longer, more thought-provoking
           text here that fills up more space?
 
-  %slide(img='http://gificiency.com/m/angry-snowcat.gif')
+  %slide(img='http://gificiency.com/m/angry-batman.gif')
     .slide-content
       .bottom
-        %h1 GIF
-        %p This is some more description text.
+        %h1.tsh GIF
+        %p.tsh This is some more description text.
 
   %slide(img='http://gificiency.com/m/dance-abed.gif')
     .slide-content
