--- a/source/layouts/layout.haml
+++ b/source/layouts/layout.haml
@@ -16,4 +16,5 @@
     = yield
 
     = javascript_include_tag  'https://ajax.googleapis.com/ajax/libs/angularjs/1.2.13/angular.min.js'
+    = javascript_include_tag  'http://angular-ui.github.io/ui-router/release/angular-ui-router.min.js'
     = javascript_include_tag  'application'
