Add tile slide modifier

--- a/source/index.haml
+++ b/source/index.haml
@@ -50,6 +50,8 @@
         %h1 GIF
         %p This is some more description text.
 
+  %slide.slide--tile(img='http://gificiency.com/m/dance-abed.gif')
+
   %slide(img='http://gificiency.com/m/happy-hulk.gif')
     .slide-content
       %h1 GIF
