--- a/source/assets/stylesheets/structures/_slide.sass
+++ b/source/assets/stylesheets/structures/_slide.sass
@@ -37,6 +37,13 @@
 .slide.slide--success
   background: $c-success
 
+// ----- Tile ----- //
+
+.slide.slide--tile
+  background-position: top-left
+  background-repeat: repeat
+  background-size: auto
+
 // ----- Warning ----- //
 
 .slide.slide--warning
