--- a/source/layouts/layout.haml
+++ b/source/layouts/layout.haml
@@ -15,6 +15,7 @@
 
     = yield
 
-    = javascript_include_tag  'https://ajax.googleapis.com/ajax/libs/angularjs/1.2.13/angular.min.js'
-    = javascript_include_tag  'http://angular-ui.github.io/ui-router/release/angular-ui-router.min.js'
-    = javascript_include_tag  'application'
+    = javascript_include_tag 'http://code.jquery.com/jquery-1.11.0.min.js'
+    = javascript_include_tag 'https://ajax.googleapis.com/ajax/libs/angularjs/1.2.13/angular.min.js'
+    = javascript_include_tag 'http://angular-ui.github.io/ui-router/release/angular-ui-router.min.js'
+    = javascript_include_tag 'application'
