Add code slides

--- a/source/assets/stylesheets/application.sass
+++ b/source/assets/stylesheets/application.sass
@@ -33,6 +33,12 @@
 @import "structures/slide"
 
 // -------------------------------------
+//   Vendor
+// -------------------------------------
+
+@import "vendor/github"
+
+// -------------------------------------
 //   Inbox
 // -------------------------------------
 
