--- a/source/assets/stylesheets/foundation/_utilities.sass
+++ b/source/assets/stylesheets/foundation/_utilities.sass
@@ -67,6 +67,13 @@
   position: absolute
   top: 50%
 
+// Code
+
+.middle--code
+  width: 60%
+
+// Text
+
 .middle--text
   width: 90%
 
@@ -230,6 +237,8 @@
   font-family: $f-base
 .tfh
   font-family: $f-header
+.tfm
+  font-family: $f-mono
 
 // ----- Size ----- //
 
