--- a/source/layouts/layout.haml
+++ b/source/layouts/layout.haml
@@ -7,6 +7,7 @@
 
     = stylesheet_link_tag 'http://fonts.googleapis.com/css?family=Oswald:700'
     = stylesheet_link_tag 'http://fonts.googleapis.com/css?family=Vollkorn:400italic,400,700'
+    = stylesheet_link_tag 'http://fonts.googleapis.com/css?family=Droid+Sans+Mono'
     = stylesheet_link_tag 'application'
 
   %body{ class: page_classes }
