--- a/source/assets/stylesheets/foundation/_base.sass
+++ b/source/assets/stylesheets/foundation/_base.sass
@@ -28,10 +28,14 @@ li
   @extend .mbs
   @extend .mtf
 
+pre
+  @extend .tfm
+
 // ----- Headers ----- //
 
 h1, .h1,
-h2, .h2
+h2, .h2,
+h3, .h3
   @extend .mbxs
   @extend .mtf
   @extend .tfh
@@ -44,6 +48,9 @@ h1, .h1
 
 h2, .h2
   font-size: 300%
+
+h3, .h3
+  font-size: 200%
 
 // -------------------------------------
 //   Inline Content
