--- a/source/index.haml
+++ b/source/index.haml
@@ -59,8 +59,8 @@
   %slide(img='http://gificiency.com/m/angry-batman.gif')
     .slide-content
       .bottom
-        %h1.tsh GIF
-        %p.tsh This is some more description text.
+        %h1.tsh WHURZRACHEL!?
+        %p WHURRIZSHE?
 
   %slide(img='http://gificiency.com/m/dance-abed.gif')
     .slide-content
