More slide styles

--- a/source/assets/stylesheets/foundation/_settings.sass
+++ b/source/assets/stylesheets/foundation/_settings.sass
@@ -30,9 +30,10 @@ $b-whitespace: 1.25em
 
 $c-background: #222
 $c-base: #222
-$c-highlight: #c0392b
+$c-error: #c0392b
+$c-highlight: #2980b9
 $c-invert: #fff
-$c-subdue: #ccc
+$c-subdue: #999
 $c-success: #27ae60
 $c-warning: #f39c12
 
