--- a/source/assets/stylesheets/foundation/_utilities.sass
+++ b/source/assets/stylesheets/foundation/_utilities.sass
@@ -224,12 +224,20 @@
 
 .tcb
   color: $c-base
+.tcg
+  color: $c-background
 .tch
   color: $c-highlight
 .tci
   color: $c-invert
+.tce
+  color: $c-error
 .tcs
   color: $c-subdue
+.tcu
+  color: $c-success
+.tcw
+  color: $c-warning
 
 // ----- Family ----- //
 
