--- a/source/assets/stylesheets/structures/_slide.sass
+++ b/source/assets/stylesheets/structures/_slide.sass
@@ -32,6 +32,12 @@
   @extend .bci
   @extend .tcb
 
+// ----- Subdue ----- //
+
+.slide.slide--subdue
+  @extend .bcs
+  @extend .tcb
+
 // ----- Success ----- //
 
 .slide.slide--success
