Add intro slide

--- a/source/index.haml
+++ b/source/index.haml
@@ -2,6 +2,16 @@
 
   %slide
     .slide-content
+      .middle
+        .bucket.bucket--flag
+          .bucket-media
+            = image_tag 'http://drewb.io/me.svg', alt: 'Drew Barontini', width: '200', height: '290'
+          .bucket-content
+            %h3 Presenter
+            %p by Drew Barontini
+
+  %slide
+    .slide-content
       .middle.tac
         %h1 Slide Title
 
