--- a/source/index.haml
+++ b/source/index.haml
@@ -7,8 +7,10 @@
           .bucket-media
             = image_tag 'http://drewb.io/me.svg', alt: 'Drew Barontini', width: '200', height: '290'
           .bucket-content
-            %h3 Presenter
-            %p by Drew Barontini
+            %h1.mbf Presenter
+            %p.mbf
+              %em by
+              Drew Barontini
 
   %slide
     .slide-content
