Update middle utility classes

--- a/source/assets/stylesheets/foundation/_utilities.sass
+++ b/source/assets/stylesheets/foundation/_utilities.sass
@@ -67,14 +67,14 @@
   position: absolute
   top: 50%
 
-// Code
+// Medium
 
-.middle--code
+.middle--med
   width: 60%
 
-// Text
+// Large
 
-.middle--text
+.middle--lrg
   width: 90%
 
 // ----- Stretch ----- //
