--- a/source/index.haml
+++ b/source/index.haml
@@ -59,7 +59,7 @@
 
   %slide
     .slide-content
-      .middle.middle--text.tac
+      .middle.middle--lrg.tac
         %h1.mbf Another Title
         %p This is a subtitle.
 
@@ -71,7 +71,7 @@
 
   %slide.slide--light
     .slide-content
-      .middle.middle--code
+      .middle.middle--med
         - code('sass') do
           :plain
             // *************************************
@@ -89,7 +89,7 @@
 
   %slide
     .slide-content
-      .middle.middle--text
+      .middle.middle--lrg
         %p.tsxl
           "What would happen if I put some longer, more thought-provoking
           text here that fills up more space?"
