Update the valign utility class

--- a/source/assets/stylesheets/foundation/_utilities.sass
+++ b/source/assets/stylesheets/foundation/_utilities.sass
@@ -90,7 +90,7 @@
 
 .valign
   +transform(translateY(-50%))
-  position: relative
+  position: absolute
   top: 50%
 
 // -------------------------------------
