More slide styles

--- a/source/assets/stylesheets/components/_card.sass
+++ b/source/assets/stylesheets/components/_card.sass
@@ -10,3 +10,12 @@
   @extend .por
   @extend .ram
   padding: $b-whitespace
+
+// -------------------------------------
+//   Modifiers
+// -------------------------------------
+
+// ----- Dark ----- //
+
+.card.card--dark
+  background: rgba(#000, 0.75)
