--- a/source/assets/stylesheets/foundation/_settings.sass
+++ b/source/assets/stylesheets/foundation/_settings.sass
@@ -20,7 +20,7 @@
 $b-border: 2px solid lighten(#0053c9, 10%)
 $b-borderRadius: 3px
 $b-boxShadow: 0 1px 2px rgba(#222, 0.25)
-$b-fontSize: 28px
+$b-fontSize: 30px
 $b-lineHeight: 1.5
 $b-minWidth: 720px
 $b-maxWidth: 61.25em
@@ -41,5 +41,6 @@ $c-warning: #f39c12
 
 $f-base: 'Vollkorn', serif
 $f-header: 'Oswald', sans-serif
+$f-light: 'Lato', sans-serif
 $f-mono: 'Droid Sans Mono', monospace
 
