--- a/source/assets/stylesheets/foundation/_utilities.sass
+++ b/source/assets/stylesheets/foundation/_utilities.sass
@@ -75,7 +75,7 @@
 // Large
 
 .middle--lrg
-  width: 90%
+  width: 100%
 
 // ----- Stretch ----- //
 
@@ -245,6 +245,8 @@
   font-family: $f-base
 .tfh
   font-family: $f-header
+.tfl
+  font-family: $f-light
 .tfm
   font-family: $f-mono
 
@@ -270,6 +272,8 @@
 
 .ttu
   text-transform: uppercase
+.ttn
+  text-transform: none
 
 // ----- Weight ----- //
 
