Add more slide examples

--- a/source/index.haml
+++ b/source/index.haml
@@ -119,16 +119,15 @@
       .bottom
         %h1.tsh WHURZRACHEL!?
 
-  %slide(img='http://gificiency.com/m/dance-abed.gif')
+  %slide.slide--fade.slide--fade--light(img='http://gificiency.com/m/dance-abed.gif')
     .slide-content
       .middle.middle--med.tac
-        .card.card--dark
-          %h1 GIF
-          %p This is some more description text.
+        %h1 GIF
+        %p This is some more description text.
 
   %slide.slide--tile(img='http://gificiency.com/m/dance-abed.gif')
 
-  %slide(img='http://gificiency.com/m/happy-hulk.gif')
+  %slide.slide--fade.slide--fade--dark(img='http://gificiency.com/m/happy-hulk.gif')
     .slide-content
       %h1 GIF
       %p This is some more description text.
