Set up more Sass variables

--- a/source/assets/stylesheets/foundation/_settings.sass
+++ b/source/assets/stylesheets/foundation/_settings.sass
@@ -44,3 +44,11 @@ $f-header: 'Oswald', sans-serif
 $f-light: 'Lato', sans-serif
 $f-mono: 'Droid Sans Mono', monospace
 
+// ----- Progress ----- //
+
+$progress-background: rgba($c-invert, 0.45)
+
+// ----- Slide ----- //
+
+$slide--fade-opacity: 0.75
+
