--- a/source/assets/stylesheets/structures/_slide.sass
+++ b/source/assets/stylesheets/structures/_slide.sass
@@ -32,7 +32,7 @@
   &::after
     @extend .stretch
     content: ''
-    opacity: 0.75
+    opacity: $slide--fade-opacity
     z-index: 1
 
 .slide.slide--fade--dark
