--- a/source/assets/stylesheets/structures/_progress.sass
+++ b/source/assets/stylesheets/structures/_progress.sass
@@ -6,7 +6,7 @@
 // *************************************
 
 .progress
-  background: rgba($c-invert, 0.45)
+  background: $progress-background
   bottom: 0
   height: 10px
   left: 0
