--- a/source/assets/stylesheets/foundation/_settings.sass
+++ b/source/assets/stylesheets/foundation/_settings.sass
@@ -9,7 +9,52 @@
 //   @font-face
 // -------------------------------------
 
-// ...
+// ----- Lato ----- //
+
+@font-face
+    font-family: 'Lato'
+    src: font-url('lato-lig-webfont.eot')
+    src: font-url('lato-lig-webfont.eot?#iefix') format('embedded-opentype'), font-url('lato-lig-webfont.woff') format('woff'), font-url('lato-lig-webfont.ttf') format('truetype'), font-url('lato-lig-webfont.svg#latolight') format('svg')
+    font-weight: normal
+    font-style: normal
+
+// ----- Oswald ----- //
+
+@font-face
+    font-family: 'Oswald'
+    src: font-url('oswald-bold-webfont.eot')
+    src: font-url('oswald-bold-webfont.eot?#iefix') format('embedded-opentype'), font-url('oswald-bold-webfont.woff') format('woff'), font-url('oswald-bold-webfont.ttf') format('truetype'), font-url('oswald-bold-webfont.svg#oswaldbold') format('svg')
+    font-weight: 700
+    font-style: normal
+
+// ----- Vollkorn ----- //
+
+// Bold
+
+@font-face
+    font-family: 'Vollkorn'
+    src: font-url('vollkorn-bold-webfont.eot')
+    src: font-url('vollkorn-bold-webfont.eot?#iefix') format('embedded-opentype'), font-url('vollkorn-bold-webfont.woff') format('woff'), font-url('vollkorn-bold-webfont.ttf') format('truetype'), font-url('vollkorn-bold-webfont.svg#vollkornbold') format('svg')
+    font-weight: bold
+    font-style: normal
+
+// Italic
+
+@font-face
+    font-family: 'Vollkorn'
+    src: font-url('vollkorn-italic-webfont.eot')
+    src: font-url('vollkorn-italic-webfont.eot?#iefix') format('embedded-opentype'), font-url('vollkorn-italic-webfont.woff') format('woff'), font-url('vollkorn-italic-webfont.ttf') format('truetype'), font-url('vollkorn-italic-webfont.svg#vollkornitalic') format('svg')
+    font-weight: normal
+    font-style: italic
+
+// Regular
+
+@font-face
+    font-family: 'Vollkorn'
+    src: font-url('vollkorn-regular-webfont.eot')
+    src: font-url('vollkorn-regular-webfont.eot?#iefix') format('embedded-opentype'), font-url('vollkorn-regular-webfont.woff') format('woff'), font-url('vollkorn-regular-webfont.ttf') format('truetype'), font-url('vollkorn-regular-webfont.svg#vollkornregular') format('svg')
+    font-weight: normal
+    font-style: normal
 
 // -------------------------------------
 //   Variables
@@ -42,7 +87,7 @@ $c-warning: #f39c12
 $f-base: 'Vollkorn', serif
 $f-header: 'Oswald', sans-serif
 $f-light: 'Lato', sans-serif
-$f-mono: 'Droid Sans Mono', monospace
+$f-mono: Courier, monospace
 
 // ----- Progress ----- //
 
