More slide styles

--- a/source/assets/stylesheets/foundation/_utilities.sass
+++ b/source/assets/stylesheets/foundation/_utilities.sass
@@ -99,12 +99,18 @@
 
 .bcb
   background: $c-base
+.bce
+  background: $c-error
 .bch
   background: $c-highlight
 .bci
   background: $c-invert
 .bcs
   background: $c-subdue
+.bcu
+  background: $c-success
+.bcw
+  background: $c-warning
 
 // -------------------------------------
 //   Display
