--- a/source/index.haml
+++ b/source/index.haml
@@ -43,6 +43,11 @@
       .middle.tac
         %h1 Success
 
+  %slide.slide--error
+    .slide-content
+      .middle.tac
+        %h1 Error
+
   %slide.slide--warning
     .slide-content
       .middle.tac
@@ -109,6 +114,36 @@
         %h1 Slide Title
 
   %slide.slide--fade.slide--fade--light(img='http://farm6.staticflickr.com/5504/9661002213_5b4eb66f86_o.jpg')
+    .slide-content
+      .middle.tac
+        %p.h4.mbf Subtitle
+        %h1 Slide Title
+
+  %slide.slide--fade.slide--fade--highlight(img='http://farm6.staticflickr.com/5504/9661002213_5b4eb66f86_o.jpg')
+    .slide-content
+      .middle.tac
+        %p.h4.mbf Subtitle
+        %h1 Slide Title
+
+  %slide.slide--fade.slide--fade--subdue(img='http://farm6.staticflickr.com/5504/9661002213_5b4eb66f86_o.jpg')
+    .slide-content
+      .middle.tac
+        %p.h4.mbf Subtitle
+        %h1 Slide Title
+
+  %slide.slide--fade.slide--fade--success(img='http://farm6.staticflickr.com/5504/9661002213_5b4eb66f86_o.jpg')
+    .slide-content
+      .middle.tac
+        %p.h4.mbf Subtitle
+        %h1 Slide Title
+
+  %slide.slide--fade.slide--fade--error(img='http://farm6.staticflickr.com/5504/9661002213_5b4eb66f86_o.jpg')
+    .slide-content
+      .middle.tac
+        %p.h4.mbf Subtitle
+        %h1 Slide Title
+
+  %slide.slide--fade.slide--fade--warning(img='http://farm6.staticflickr.com/5504/9661002213_5b4eb66f86_o.jpg')
     .slide-content
       .middle.tac
         %p.h4.mbf Subtitle
