Update the slide example

--- a/source/index.haml
+++ b/source/index.haml
@@ -160,7 +160,7 @@
         %h1 GIF
         %p This is some more description text.
 
-  %slide.slide--tile(img='http://gificiency.com/m/dance-abed.gif')
+  %slide.slide--tile(img='http://gificiency.com/m/what-bored.gif')
 
   %slide.slide--fade.slide--fade--dark(img='http://gificiency.com/m/happy-hulk.gif')
     .slide-content
