Adjust the base font size at larger viewports

--- a/source/assets/stylesheets/foundation/_base.sass
+++ b/source/assets/stylesheets/foundation/_base.sass
@@ -15,6 +15,8 @@ html
 body
   font-size: 100%
   overflow: hidden
+  +respond-to(100em)
+    font-size: 150%
 
 // -------------------------------------
 //   Block Content
