Remove the Vollkorn font

--- a/source/assets/stylesheets/foundation/_settings.sass
+++ b/source/assets/stylesheets/foundation/_settings.sass
@@ -27,35 +27,6 @@
     font-weight: 700
     font-style: normal
 
-// ----- Vollkorn ----- //
-
-// Bold
-
-@font-face
-    font-family: 'Vollkorn'
-    src: font-url('vollkorn-bold-webfont.eot')
-    src: font-url('vollkorn-bold-webfont.eot?#iefix') format('embedded-opentype'), font-url('vollkorn-bold-webfont.woff') format('woff'), font-url('vollkorn-bold-webfont.ttf') format('truetype'), font-url('vollkorn-bold-webfont.svg#vollkornbold') format('svg')
-    font-weight: bold
-    font-style: normal
-
-// Italic
-
-@font-face
-    font-family: 'Vollkorn'
-    src: font-url('vollkorn-italic-webfont.eot')
-    src: font-url('vollkorn-italic-webfont.eot?#iefix') format('embedded-opentype'), font-url('vollkorn-italic-webfont.woff') format('woff'), font-url('vollkorn-italic-webfont.ttf') format('truetype'), font-url('vollkorn-italic-webfont.svg#vollkornitalic') format('svg')
-    font-weight: normal
-    font-style: italic
-
-// Regular
-
-@font-face
-    font-family: 'Vollkorn'
-    src: font-url('vollkorn-regular-webfont.eot')
-    src: font-url('vollkorn-regular-webfont.eot?#iefix') format('embedded-opentype'), font-url('vollkorn-regular-webfont.woff') format('woff'), font-url('vollkorn-regular-webfont.ttf') format('truetype'), font-url('vollkorn-regular-webfont.svg#vollkornregular') format('svg')
-    font-weight: normal
-    font-style: normal
-
 // -------------------------------------
 //   Variables
 // -------------------------------------
@@ -84,7 +55,7 @@ $c-warning: #f39c12
 
 // ----- Fonts ----- //
 
-$f-base: 'Vollkorn', serif
+$f-base: 'Lato', sans-serif
 $f-header: 'Oswald', sans-serif
 $f-light: 'Lato', sans-serif
 $f-mono: Courier, monospace
