--- a/source/index.haml
+++ b/source/index.haml
@@ -8,9 +8,7 @@
             = image_tag 'http://drewb.io/me.svg', alt: 'Drew Barontini', width: '200', height: '290'
           .bucket-content
             %h1.mbf Presenter
-            %p.mbf
-              %em by
-              Drew Barontini
+            %p.mbf by Drew Barontini
 
   %slide
     .slide-content
