--- a/source/assets/stylesheets/structures/_slide.sass
+++ b/source/assets/stylesheets/structures/_slide.sass
@@ -11,6 +11,7 @@
   @extend .tci
   background-color: $c-highlight
   background-position: center
+  background-repeat: no-repeat
   background-size: cover
   height: 100%
   overflow: hidden
@@ -20,6 +21,11 @@
 // -------------------------------------
 //   Modifiers
 // -------------------------------------
+
+// ----- Contain ----- //
+
+.slide.slide--contain
+  background-size: contain
 
 // ----- Dark ----- //
 
