--- a/source/assets/stylesheets/foundation/_base.sass
+++ b/source/assets/stylesheets/foundation/_base.sass
@@ -35,6 +35,7 @@ pre
 
 blockquote
   @extend .mbs
+  @extend .tfl
   @extend .tsxl
   margin-left: 0
 
@@ -49,9 +50,8 @@ h3, .h3,
 h4, .h4
   @extend .mtf
   @extend .tfh
-  @extend .ttu
-  line-height: 1.2
-  font-weight: 700
+  @extend .twb
+  line-height: 1
 
 h1, .h1
   font-size: 400%
