--- a/source/index.haml
+++ b/source/index.haml
@@ -53,7 +53,7 @@
 
   %slide.slide--light
     .slide-content
-      %h1.mbs List of Things
+      %h1.mbxs List of Things
       %ul
         %li One thing
         %li Here's another thing
@@ -61,7 +61,7 @@
 
   %slide.slide--light
     .slide-content
-      %h1.mbs List of Things
+      %h1.mbxs List of Things
       .grid
         .grid-box.grid-box--1of2
           %ul
@@ -103,7 +103,7 @@
         %blockquote
           "What would happen if I put some longer, more thought-provoking
           text here that fills up more space?"
-        %p.mbf &mdash; Drew Barontini
+        %p &mdash; Drew Barontini
 
   %slide.slide--fade.slide--fade--dark(img='http://farm6.staticflickr.com/5504/9661002213_5b4eb66f86_o.jpg')
     .slide-content
