Adjust utility classes, default slides

--- a/source/assets/stylesheets/foundation/_base.sass
+++ b/source/assets/stylesheets/foundation/_base.sass
@@ -52,20 +52,21 @@ h4, .h4
   @extend .tfh
   @extend .twb
   line-height: 1
+  > b
+    @extend .db
 
 h1, .h1
-  font-size: 400%
+  font-size: 450%
 
 h2, .h2
-  font-size: 300%
+  font-size: 350%
 
 h3, .h3
-  font-size: 200%
+  font-size: 250%
 
 h4, .h4
   @extend .tfl
-  font-size: 150%
-  font-weight: 300
+  font-size: 200%
 
 // -------------------------------------
 //   Inline Content
