--- a/source/assets/stylesheets/foundation/_utilities.sass
+++ b/source/assets/stylesheets/foundation/_utilities.sass
@@ -66,16 +66,17 @@
   left: 50%
   position: absolute
   top: 50%
+  width: 100%
+
+// Auto
+
+.middle.middle--auto
+  width: auto
 
 // Medium
 
-.middle--med
+.middle.middle--med
   width: 60%
-
-// Large
-
-.middle--lrg
-  width: 100%
 
 // ----- Stretch ----- //
 
