--- a/source/index.haml
+++ b/source/index.haml
@@ -79,7 +79,7 @@
       .middle.middle--lrg.tac
         = image_tag 'http://placehold.it/800x400', alt: 'Placeholder', class: 'slide-media'
 
-  %slide
+  %slide.slide--video
     .middle.tac
       %iframe.slide-media.mhc(width="640" height="480" src="//www.youtube.com/embed/7q89tdSjE-0" frameborder="0" allowfullscreen)
 
