Add title slide style

--- a/source/index.haml
+++ b/source/index.haml
@@ -10,7 +10,7 @@
             %h1.mbf Presenter
             %p.mbf by @drewbarontini
 
-  %slide
+  %slide.slide--title
     .slide-content
       .middle.tac
         %h1 Slide Title
