--- a/source/assets/stylesheets/foundation/_utilities.sass
+++ b/source/assets/stylesheets/foundation/_utilities.sass
@@ -270,12 +270,8 @@
   font-family: $f-base
 .tfh
   font-family: $f-header
-.tfl
-  font-family: $f-light
 .tfm
   font-family: $f-mono
-.tfxl
-  font-family: $f-xlight
 
 // ----- Size ----- //
 
@@ -304,7 +300,9 @@
 
 // ----- Weight ----- //
 
-.twn
-  font-weight: normal
 .twb
   font-weight: bold
+.twl
+  font-weight: 300
+.twn
+  font-weight: normal
