--- a/source/index.haml
+++ b/source/index.haml
@@ -147,19 +147,19 @@
   %slide(img='http://gificiency.com/m/angry-batman.gif')
     .slide-content
       .bottom
-        %h1 GIF!
+        %h1 GIF
 
   %slide.slide--fade.slide--fade--light(img='http://gificiency.com/m/dance-abed.gif')
     .slide-content
       .middle.middle--med.tac
-        %h1 GIF!
+        %h1 GIF
         %p This is some more description text.
 
   %slide.slide--tile(img='http://gificiency.com/m/what-bored.gif')
 
   %slide.slide--fade.slide--fade--dark(img='http://gificiency.com/m/happy-hulk.gif')
     .slide-content
-      %h1 GIF!
+      %h1 GIF
       %p This is some more description text.
 
   %slide(img='http://gificiency.com/m/excited-parks.gif')
