--- a/source/assets/stylesheets/foundation/_base.sass
+++ b/source/assets/stylesheets/foundation/_base.sass
@@ -35,8 +35,8 @@ pre
 
 blockquote
   @extend .mbs
-  @extend .tfl
   @extend .tsxl
+  @extend .twl
   margin-left: 0
 
 // ----- Headers ----- //
@@ -49,25 +49,26 @@ h2, .h2,
 h3, .h3,
 h4, .h4
   @extend .mtf
-  @extend .tfh
   @extend .twb
   line-height: 1.3
   > b
     @extend .db
 
 h1, .h1
-  font-size: 450%
-  line-height: 1
+  @extend .ttu
+  font-family: $f-header
+  line-height: 1.2
+  font-size: 420%
 
 h2, .h2
-  font-size: 350%
+  font-size: 320%
 
 h3, .h3
-  font-size: 250%
+  font-size: 220%
 
 h4, .h4
-  @extend .tfl
-  font-size: 200%
+  font-size: 175%
+  font-weight: 300
 
 // -------------------------------------
 //   Inline Content
