--- a/source/index.haml
+++ b/source/index.haml
@@ -1,15 +1,5 @@
 %slides
 
-  %slide
-    .slide-content
-      .middle.middle--auto
-        .bucket.bucket--flag
-          .bucket-media
-            = image_tag 'http://drewb.io/me.svg', alt: 'Drew Barontini', width: '200', height: '290'
-          .bucket-content
-            %h1.mbf Presenter
-            %p.mbf by @drewbarontini
-
   %slide.slide--title
     .slide-content
       .middle.tac
@@ -51,7 +41,7 @@
       .middle.tac
         %h1 Warning
 
-  %slide.slide--light
+  %slide
     .slide-content
       %h1.mbxs List of Things
       %ul
@@ -59,7 +49,7 @@
         %li Here's another thing
         %li And another
 
-  %slide.slide--light
+  %slide
     .slide-content
       %h1.mbxs List of Things
       .grid
@@ -83,7 +73,7 @@
     .middle.tac
       %iframe.slide-media.mhc(width="640" height="480" src="//www.youtube.com/embed/7q89tdSjE-0" frameborder="0" allowfullscreen)
 
-  %slide.slide--light
+  %slide
     .slide-content
       .middle.middle--auto
         - code('sass') do
@@ -147,7 +137,7 @@
   %slide(img='http://gificiency.com/m/angry-batman.gif')
     .slide-content
       .bottom
-        %h1 GIF
+        %h1.tci GIF
 
   %slide.slide--fade.slide--fade--light(img='http://gificiency.com/m/dance-abed.gif')
     .slide-content
