--- a/source/assets/stylesheets/structures/_slide.sass
+++ b/source/assets/stylesheets/structures/_slide.sass
@@ -142,10 +142,11 @@
 
 .slide.is-active
   @extend .fauxShow
-  +transition(all 0.4s ease-in-out)
 
   .slide-content
     @extend .fauxShow
+    +transform(scale(1))
+    +transition-transform(0.4s ease-in-out)
 
 // -------------------------------------
 //   Scaffolding
@@ -157,6 +158,7 @@
   @extend .fauxHide
   @extend .mal
   @extend .stretch
+  +transform(scale(0.5))
   z-index: 10
 
 // ----- Image ----- //
