--- a/source/assets/stylesheets/foundation/_settings.sass
+++ b/source/assets/stylesheets/foundation/_settings.sass
@@ -11,7 +11,10 @@
 
 // ----- Base ----- //
 
-$b-border: 2px solid lighten(#0053c9, 10%)
+$b-borderColor: #292b2f
+$b-borderStyle: solid
+$b-borderWidth: 4px
+$b-border: $b-borderSize $b-borderStyle $b-borderColor
 $b-borderRadius: 3px
 $b-boxShadow: 0 1px 2px rgba(#222, 0.25)
 $b-fontSize: 30px
