Update border settings

--- a/source/assets/stylesheets/foundation/_settings.sass
+++ b/source/assets/stylesheets/foundation/_settings.sass
@@ -14,7 +14,7 @@
 $b-borderColor: #292b2f
 $b-borderStyle: solid
 $b-borderWidth: 4px
-$b-border: $b-borderSize $b-borderStyle $b-borderColor
+$b-border: $b-borderWidth $b-borderStyle $b-borderColor
 $b-borderRadius: 3px
 $b-boxShadow: 0 1px 2px rgba(#222, 0.25)
 $b-fontSize: 30px
