Add heading utility classes

--- a/source/assets/stylesheets/foundation/_base.sass
+++ b/source/assets/stylesheets/foundation/_base.sass
@@ -55,19 +55,19 @@ h4, .h4
     @extend .db
 
 h1, .h1
+  @extend .tsh1
   @extend .ttu
-  font-family: $f-header
   line-height: 1.2
-  font-size: 420%
+  font-family: $f-header
 
 h2, .h2
-  font-size: 320%
+  @extend .tsh2
 
 h3, .h3
-  font-size: 220%
+  @extend .tsh3
 
 h4, .h4
-  font-size: 175%
+  @extend .tsh4
   font-weight: 300
 
 // -------------------------------------
