--- a/source/assets/stylesheets/foundation/_utilities.sass
+++ b/source/assets/stylesheets/foundation/_utilities.sass
@@ -308,6 +308,8 @@
 
 // ----- Size ----- //
 
+// All
+
 .tsxs
   font-size: 60%
 .tss
@@ -318,6 +320,17 @@
   font-size: 150%
 .tsxl
   font-size: 200%
+
+// Headings
+
+.tsh1
+  font-size: $b-h1-fontSize
+.tsh2
+  font-size: $b-h2-fontSize
+.tsh3
+  font-size: $b-h3-fontSize
+.tsh4
+  font-size: $b-h4-fontSize
 
 // ----- Style ----- //
 
