Make noTransition actually work

--- a/source/index.haml
+++ b/source/index.haml
@@ -49,7 +49,7 @@
         %li Here's another thing
         %li And another
 
-  %slide
+  %slide.noTransition
     .slide-content
       %h1.mbxs List of Things
       .grid
