New YouTube video directive

--- a/source/index.haml
+++ b/source/index.haml
@@ -71,7 +71,8 @@
 
   %slide.slide--video
     .middle.tac
-      %iframe.slide-media.mhc(width="640" height="480" src="//www.youtube.com/embed/7q89tdSjE-0" frameborder="0" allowfullscreen)
+      .slide-video
+        %yt-video(width="1280" height="720" video-src="xZY43QSx3Fk")
 
   %slide
     .slide-content
